@@ -81,13 +81,12 @@ private:
 	CanvasInterface *m_canvasWidget;
 	widgets::NotificationBar *m_notificationBar;
 	NotificationBarState m_notificationBarState = NotificationBarState::None;
+	const bool m_needsEvenResizeHack;
 	bool m_blockScrolling = false;
 	bool m_touchUseGestureEvents = false;
-#ifdef CANVAS_VIEW_KEEP_EVEN
 	bool m_marginsReset = false;
 	bool m_marginsSet = false;
 	bool m_resizeHandled = false;
-#endif
 };
 
 }
